Create Activity and layout for statue

--- a/mobile/app/src/main/res/layout/activity_statue.xml
+++ b/mobile/app/src/main/res/layout/activity_statue.xml
@@ -1,9 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.StatueActivity">
+    android:background="@drawable/bg_background"
+    android:orientation="vertical">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/statue_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/statue_label"
+            android:textAppearance="@style/simple_label_bold"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.22"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/vector"
+            android:layout_width="200dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/v_underline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.578"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/statue_label"
+            app:layout_constraintVertical_bias="1.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/statue_1_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:textSize="24sp"
+            android:textAppearance="@style/simple_label"
+            android:text="@string/statue_text_1"/>
+
+        <TextView
+            android:id="@+id/statue_2_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:textSize="24sp"
+            android:textAppearance="@style/simple_label"
+            android:text="@string/statue_text_2"/>
+
+        <TextView
+            android:id="@+id/statue_3_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:textSize="24sp"
+            android:textAppearance="@style/simple_label"
+            android:text="@string/statue_text_3"/>
+
+        <TextView
+            android:id="@+id/statue_4_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:textSize="24sp"
+            android:textAppearance="@style/simple_label"
+            android:text="@string/statue_text_4"/>
+
+</LinearLayout>
