--- a/mobile/app/src/main/res/layout/activity_change_password.xml
+++ b/mobile/app/src/main/res/layout/activity_change_password.xml
@@ -40,60 +40,66 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/password_old_tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:text="@string/choose_image_text"
+        android:layout_marginBottom="10dp"
+        android:text="@string/insert_old_password_label"
         android:textAppearance="@style/simple_label_bold"
         android:textSize="24sp"/>
 
-    <Button
-        android:id="@+id/choose_image_btn"
+    <EditText
+        android:id="@+id/password_old_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
-        android:layout_marginHorizontal="40dp"
-        android:background="@drawable/et_edittext"
-        android:drawableStart="@drawable/ic_image"
-        android:paddingStart="20dp"
-        android:text="@string/browse"
-        android:textAppearance="@style/simple_button"
-        android:textColor="@color/gray"
-        app:backgroundTint="@null"
-        tools:ignore="RtlSymmetry" />
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/et_edittext" />
+
+    <TextView
+        android:id="@+id/password_new_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/insert_new_password_label"
+        android:textAppearance="@style/simple_label_bold"
+        android:textSize="24sp"/>
+
+    <EditText
+        android:id="@+id/password_new_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/et_edittext" />
+
+    <TextView
+        android:id="@+id/password_new_confirm_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/repeat_new_password_label"
+        android:textAppearance="@style/simple_label_bold"
+        android:textSize="24sp"/>
+
+    <EditText
+        android:id="@+id/password_new_confirm_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/et_edittext" />
 
     <Button
-        android:id="@+id/change_password_btn"
+        android:id="@+id/save_changes_new_password_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
-        android:layout_marginVertical="20dp"
-        android:layout_marginHorizontal="40dp"
-        android:text="@string/change_password"
-        android:textAppearance="@style/simple_button"
-        android:textColor="@color/light_gray"
-        app:backgroundTint="@null" />
-
-    <Button
-        android:id="@+id/delete_account_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
-        android:background="@drawable/btn_simple"
-        android:layout_marginVertical="20dp"
-        android:text="@string/delete_account"
-        android:textAppearance="@style/simple_button"
-        android:textColor="@color/light_gray"
-        app:backgroundTint="@null" />
-
-    <Button
-        android:id="@+id/save_changes_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/btn_simple"
-        android:layout_marginVertical="20dp"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginHorizontal="20dp"
         android:text="@string/save_changes"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
