--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -26,18 +26,19 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wallets_rv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="20dp"
             tools:listitem="@layout/item_wallet">
         </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/add_new_wallet_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="40dp"
             android:text="@string/add_new_wallet"
             android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
