--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -78,7 +78,7 @@
 
             <Button
                 android:id="@+id/edit_profile_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_simple"
