--- a/mobile/app/src/main/res/layout/activity_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_wallet.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/bg_background">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="40dp"
             android:layout_margin="20dp"
@@ -225,7 +225,7 @@
 
             <Button
                 android:id="@+id/statistics_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_simple"
@@ -236,7 +236,7 @@
 
             <Button
                 android:id="@+id/delete_wallet_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_danger"
                 android:text="@string/delete_wallet"
