--- a/mobile/app/src/main/res/layout/item_notification_invitation.xml
+++ b/mobile/app/src/main/res/layout/item_notification_invitation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="40dp"
     android:layout_margin="10dp"
@@ -54,7 +54,7 @@
 
     <Button
         android:id="@+id/accept_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
@@ -65,7 +65,7 @@
 
     <Button
         android:id="@+id/deny_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_danger"
         android:text="@string/deny"
