--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="40dp"
     android:layout_marginBottom="10dp"
@@ -63,7 +63,7 @@
 
         <Button
             android:id="@+id/go_to_wallet_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:text="@string/go_to_wallet"
