Iplm changing password

--- a/mobile/app/src/main/res/layout/activity_change_password.xml
+++ b/mobile/app/src/main/res/layout/activity_change_password.xml
@@ -54,8 +54,11 @@
         android:id="@+id/password_old_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/et_edittext" />
+        android:background="@drawable/et_edittext"
+        android:importantForAutofill="no"
+        tools:ignore="LabelFor"/>
 
     <TextView
         android:id="@+id/password_new_tv"
@@ -72,8 +75,11 @@
         android:id="@+id/password_new_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/et_edittext" />
+        android:importantForAutofill="no"
+        android:background="@drawable/et_edittext"
+        tools:ignore="LabelFor"/>
 
     <TextView
         android:id="@+id/password_new_confirm_tv"
@@ -90,8 +96,11 @@
         android:id="@+id/password_new_confirm_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/et_edittext" />
+        android:importantForAutofill="no"
+        android:background="@drawable/et_edittext"
+        tools:ignore="LabelFor"/>
 
     <Button
         android:id="@+id/save_changes_new_password_btn"
