--- a/mobile/app/src/main/res/layout/activity_login.xml
+++ b/mobile/app/src/main/res/layout/activity_login.xml
@@ -1,63 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"
     android:background="@drawable/bg_background">
 
-    <View
-        android:id="@+id/vector"
-        android:layout_width="156dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="56dp"
-        android:background="@drawable/v_underline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.749"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/log_in_label" />
-
-    <TextView
-        android:id="@+id/log_in_label"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="59dp"
-        android:text="@string/log_in_label"
-        android:textAppearance="@style/simple_label"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="30dp">
+
+        <View
+            android:id="@+id/vector"
+            android:layout_width="156dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="56dp"
+            android:background="@drawable/v_underline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.749"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/log_in_label" />
+
+        <TextView
+            android:id="@+id/log_in_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="39dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="59dp"
+            android:text="@string/log_in_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="48sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/email_reg_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/email_label"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/log_in_label" />
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/email_reg_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
         android:background="@drawable/et_edittext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_reg_tv"
         android:importantForAutofill="no"
         tools:ignore="LabelFor"  />
 
@@ -65,28 +64,19 @@
         android:id="@+id/password_reg_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/password_label"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_reg_et" />
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/password_reg_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
         android:background="@drawable/et_edittext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_reg_tv"
         android:importantForAutofill="no"
         tools:ignore="LabelFor" />
 
@@ -94,63 +84,48 @@
         android:id="@+id/password_forget_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/password_forget_text"
         android:textAppearance="@style/simple_label_bold"
         android:textSize="18sp"
         android:textColor="@drawable/btn_text"
-        android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_reg_et" />
+        android:clickable="true" />
 
     <Button
         android:id="@+id/log_in_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="30dp"
         android:paddingBottom="6dp"
         android:text="@string/log_in"
         app:backgroundTint="@null"
         android:textColor="@color/light_gray"
         android:textAppearance="@style/simple_button"
-        android:background="@drawable/btn_simple"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_forget_label" />
+        android:background="@drawable/btn_simple" />
 
-    <TextView
-        android:id="@+id/no_account_label"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="65dp"
-        android:text="@string/no_account_text"
-        android:textAppearance="@style/simple_label"
-        android:textColor="@color/light_gray"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sign_up_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_btn"
-        app:layout_constraintVertical_bias="0.275" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/no_account_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_account_text"
+            android:textAppearance="@style/simple_label"
+            android:textColor="@color/light_gray"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/sign_up_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="65dp"
-        android:clickable="true"
-        android:text="@string/sign_up_text"
-        android:textAppearance="@style/simple_label_bold"
-        android:textColor="@drawable/btn_text"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/no_account_label"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_btn"
-        app:layout_constraintVertical_bias="0.275" />
+        <TextView
+            android:id="@+id/sign_up_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:text="@string/sign_up_text"
+            android:textAppearance="@style/simple_label_bold"
+            android:textColor="@drawable/btn_text"
+            android:textSize="18sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+</LinearLayout>
