--- a/mobile/app/src/main/res/layout/activity_add_member.xml
+++ b/mobile/app/src/main/res/layout/activity_add_member.xml
@@ -56,6 +56,7 @@
                 android:id="@+id/name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:textAppearance="@style/simple_label_bold"
                 android:textSize="30sp"
                 android:textColor="@color/yellow" />
