--- a/mobile/app/src/main/res/layout/activity_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_wallet.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:textAppearance="@style/simple_label_bold"
                 android:textSize="36sp"
                 android:textColor="@color/yellow" />
