--- a/mobile/app/src/main/res/layout/activity_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_wallet.xml
@@ -65,6 +65,15 @@
                 android:text="@string/owner_label" />
 
             <TextView
+                android:id="@+id/category_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="@style/simple_label"
+                android:textSize="20sp"
+                android:text="@string/category_label" />
+
+            <TextView
                 android:id="@+id/number_of_members_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
