Add action for all checkboxes in list

--- a/mobile/app/src/main/res/drawable/cb_person.xml
+++ b/mobile/app/src/main/res/drawable/cb_person.xml
@@ -3,10 +3,15 @@
     android:dither="true">
 
     <item
+        android:state_enabled="false"
+        android:state_checked="true"
+        android:drawable="@drawable/cb_person_checked_not_active" />
+    <item
         android:state_checked="true"
         android:drawable="@drawable/cb_person_checked" />
     <item
         android:state_enabled="false"
+        android:state_checked="false"
         android:drawable="@drawable/cb_person_not_active" />
     <item
         android:drawable="@drawable/cb_person_not_checked"/>
