--- a/mobile/app/src/main/res/layout/fragment_members.xml
+++ b/mobile/app/src/main/res/layout/fragment_members.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragment.MembersFragment"
+    android:orientation="vertical"
     android:gravity="center"
-    android:layout_marginBottom="20dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="10dp"
-        android:background="@drawable/bg_round_box_light">
+    android:padding="10dp"
+    tools:context=".fragment.MembersFragment"
+    android:background="@drawable/bg_round_box_light">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/members_wallet_rv"
@@ -36,6 +30,4 @@
             android:text="@string/edit_members_list"
             android:textSize="18sp"
             android:textAppearance="@style/simple_button" />
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
