--- a/mobile/app/src/main/res/layout/item_notification_message.xml
+++ b/mobile/app/src/main/res/layout/item_notification_message.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:textAppearance="@style/simple_label"
