Change checkbox statue design

--- a/mobile/app/src/main/res/layout/activity_registration.xml
+++ b/mobile/app/src/main/res/layout/activity_registration.xml
@@ -161,6 +161,7 @@
                 android:text="@string/statute_text"
                 android:textAppearance="@style/simple_label"
                 android:textColor="@color/light_gray"
+                android:button="@drawable/cb_simple"
                 android:textSize="16sp" />
 
             <TextView
